[package]

# Project metadata
name = "rbpf"
version = "0.2.0"
authors = ["Quentin <quentin@isovalent.com>"]
edition = "2021"

# Additional metadata for packaging
description = "Virtual machine and JIT compiler for eBPF programs"
repository = "https://github.com/qmonnet/rbpf"
readme = "README.md"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0/MIT"

# Packaging directives
include = [
    "src/**",
    "examples/**",
    "tests/**",
    "bench/**",
    "LICENSE*",
    "Cargo.toml",
]

[lib]
doctest = false

[dependencies]
heapless = "0.8.0"

[dev-dependencies]

elf = "0.0.10"
json = "0.11"
hex = "0.4.3"
origrbpf = { path = "../origrbpf" }

[features]
default = []

